k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-deployment
  labels:
    app: todoapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      containers:
        - name: todoapp
          image: todo-app-image:latest
          ports:
            - containerPort: 8017
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
