k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-service
spec:
  type: NodePort
  selector:
    app: todoapp
  ports:
    - protocol: TCP
      port: 8017
      targetPort: 8017
      nodePort: 30080
